spectec/test/elab/neg/ctx-metavar-id-has-suffix.spectec
;; A meta-variable identifier carries a numeric suffix (`_N`) that
;; strip_var_suffix would remove, leaving an invalid bare identifier.

var x_1 : nat
